--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "nuxt-buefy": "^0.4.8"
+    "nuxt-buefy": "^0.4.8",
+    "sass": "^1.42.1",
+    "sass-loader": "^10.2.0"
   },
   "devDependencies": {}
 }
